@@ -1,5 +1,6 @@
 package lk.sampath.leaderboard.services;
 
+import lk.sampath.leaderboard.client.SonarQubeClient;
 import lk.sampath.leaderboard.entity.*;
 import lk.sampath.leaderboard.repository.*;
 import lombok.RequiredArgsConstructor;
@@ -8,637 +9,287 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
-/**
- * Service for calculating monthly rankings and identifying champions
- */
-@Slf4j
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class RankingCalculationService {
 
-    private final DeveloperRepository developerRepository;
+    private final SonarQubeClient sonarClient;
     private final ProjectRepository projectRepository;
-    private final DeveloperMetricsDailyRepository developerMetricsDailyRepository;
+    private final DeveloperRepository developerRepository;
+    private final IssueRepository issueRepository;
     private final IndividualRankingRepository individualRankingRepository;
     private final ProjectRankingRepository projectRankingRepository;
-    private final MonthlyChampionRepository monthlyChampionRepository;
+    private final KlocCalculationService klocCalculationService;
 
-    /**
-     * Calculate all rankings for a given month
-     * This is the main entry point for Phase 3
-     */
+    private static final BigDecimal THOUSAND = new BigDecimal("1000");
+
     @Transactional
-    public void calculateMonthlyRankings(LocalDate monthStart) {
-        log.info("========================================");
-        log.info("Starting monthly ranking calculation for: {}", monthStart);
-        log.info("========================================");
+    public void calculateMonthlyRankings(LocalDate month) {
+        log.info("Starting ranking calculation for {}", month);
 
-        // Ensure it's the first day of the month
-        monthStart = monthStart.withDayOfMonth(1);
+        LocalDate startOfMonth = month.withDayOfMonth(1);
+        LocalDate endOfMonth = month.withDayOfMonth(month.lengthOfMonth());
+        LocalDateTime startDateTime = startOfMonth.atStartOfDay();
+        LocalDateTime endDateTime = endOfMonth.atTime(23, 59, 59);
 
-        try {
-            // Step 1: Calculate Individual Rankings
-            log.info("Step 1: Calculating individual rankings...");
-            calculateIndividualRankings(monthStart);
+        // Calculate individual rankings
+        calculateIndividualRankings(month, startDateTime, endDateTime);
 
-            // Step 2: Calculate Project Rankings
-            log.info("Step 2: Calculating project rankings...");
-            calculateProjectRankings(monthStart);
+        // Calculate project rankings
+        calculateProjectRankings(month);
 
-            // Step 3: Identify and Store Champions
-            log.info("Step 3: Identifying champions...");
-            identifyMonthlyChampions(monthStart);
-
-            log.info("========================================");
-            log.info("✓ Monthly ranking calculation completed successfully");
-            log.info("========================================");
-
-        } catch (Exception e) {
-            log.error("Error calculating monthly rankings", e);
-            throw new RuntimeException("Failed to calculate monthly rankings", e);
-        }
+        log.info("Completed ranking calculation for {}", month);
     }
 
-    /**
-     * Calculate rankings for all active developers
-     */
-    @Transactional
-    public void calculateIndividualRankings(LocalDate rankingPeriod) {
-        log.info("Calculating individual rankings for period: {}", rankingPeriod);
-
-        LocalDate monthStart = rankingPeriod.withDayOfMonth(1);
-        LocalDate monthEnd = monthStart.plusMonths(1).minusDays(1);
-
-        // Get all active developers
-        List<Developer> developers = developerRepository.findByIsActiveTrue();
-        log.info("Processing {} developers", developers.size());
-
-        // Calculate metrics for each developer
+    private void calculateIndividualRankings(LocalDate month, LocalDateTime startDateTime, LocalDateTime endDateTime) {
+        List<Developer> activeDevelopers = developerRepository.findByIsActiveTrue();
         List<IndividualRanking> rankings = new ArrayList<>();
 
-        for (Developer developer : developers) {
-            try {
-                IndividualRanking ranking = calculateDeveloperRanking(developer, monthStart, monthEnd);
-                if (ranking != null) {
-                    rankings.add(ranking);
-                }
-            } catch (Exception e) {
-                log.error("Error calculating ranking for developer {}: {}",
-                        developer.getDisplayName(), e.getMessage());
-            }
+        for (Developer developer : activeDevelopers) {
+            IndividualRanking ranking = individualRankingRepository
+                    .findByDeveloperAndRankingPeriod(developer, month)
+                    .orElseGet(() -> IndividualRanking.builder()
+                            .developer(developer)
+                            .rankingPeriod(month)
+                            .build());
+
+            // Calculate Defect Terminator metrics
+            Long resolved = issueRepository.countResolvedIssues(developer.getId(), startDateTime, endDateTime);
+            Long introduced = issueRepository.countIntroducedIssues(developer.getId(), startDateTime, endDateTime);
+            ranking.setViolationsResolved(resolved.intValue());
+            ranking.setViolationsIntroduced(introduced.intValue());
+            ranking.setDefectTerminatorScore(resolved.intValue() - introduced.intValue());
+
+            // Set KLOC to zero for developers (not tracking individual KLOC)
+            ranking.setTotalKloc(BigDecimal.ZERO);
+
+            // Calculate Code Rock (Total open bugs - lower is better)
+            Long bugCount = issueRepository.countOpenIssuesByDeveloperAndType(
+                    developer.getId(), Issue.IssueType.BUG);
+            ranking.setBugsPerKloc(BigDecimal.valueOf(bugCount)); // Using as absolute count
+            ranking.setCodeRockScore(BigDecimal.valueOf(bugCount));
+
+            // Calculate Code Shield (Total open vulnerabilities - lower is better)
+            Long vulnCount = issueRepository.countOpenIssuesByDeveloperAndType(
+                    developer.getId(), Issue.IssueType.VULNERABILITY);
+            ranking.setVulnerabilitiesPerKloc(BigDecimal.valueOf(vulnCount)); // Using as absolute count
+            ranking.setCodeShieldScore(BigDecimal.valueOf(vulnCount));
+
+            // Calculate Craftsman (Total open code smells - lower is better)
+            Long smellCount = issueRepository.countOpenIssuesByDeveloperAndType(
+                    developer.getId(), Issue.IssueType.CODE_SMELL);
+            ranking.setCodeSmellsPerKloc(BigDecimal.valueOf(smellCount)); // Using as absolute count
+            ranking.setCraftsmanScore(BigDecimal.valueOf(smellCount));
+
+            rankings.add(ranking);
         }
 
-        // Assign ranks for each category
-        assignDefectTerminatorRanks(rankings);
-        assignCodeRockRanks(rankings);
-        assignCodeShieldRanks(rankings);
-        assignCraftsmanRanks(rankings);
-        assignClimberRanks(rankings, monthStart);
-
-        // Save all rankings
-        individualRankingRepository.saveAll(rankings);
-
-        log.info("✓ Calculated rankings for {} developers", rankings.size());
-    }
-
-    /**
-     * Calculate ranking for a single developer
-     */
-    private IndividualRanking calculateDeveloperRanking(Developer developer,
-                                                        LocalDate monthStart,
-                                                        LocalDate monthEnd) {
-        // Get all metrics for this developer in the month
-        List<DeveloperMetricsDaily> metrics = developerMetricsDailyRepository
-                .findByDeveloperAndDateAfter(developer, monthStart);
-
-        // Filter for the specific month
-        metrics = metrics.stream()
-                .filter(m -> !m.getDateRecorded().isBefore(monthStart) &&
-                        !m.getDateRecorded().isAfter(monthEnd))
-                .toList();
-
-        if (metrics.isEmpty()) {
-            log.debug("No metrics found for developer: {}", developer.getDisplayName());
-            return null;
-        }
-
-        // Aggregate metrics
-        int violationsIntroduced = metrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getViolationsIntroduced)
-                .sum();
-
-        int violationsResolved = metrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getViolationsResolved)
-                .sum();
-
-        int bugsIntroduced = metrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getBugsIntroduced)
-                .sum();
-
-        int vulnerabilitiesIntroduced = metrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getVulnerabilitiesIntroduced)
-                .sum();
-
-        int codeSmellsIntroduced = metrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getCodeSmellsIntroduced)
-                .sum();
-
-        int linesOfCode = metrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getLinesOfCodeContributed)
-                .sum();
-
-        double totalKLOC = linesOfCode / 1000.0;
-
-        // Create ranking record
-        IndividualRanking ranking = new IndividualRanking();
-        ranking.setDeveloper(developer);
-        ranking.setRankingPeriod(monthStart);
-
-        // Defect Terminator Score
-        ranking.setDefectTerminatorScore(violationsResolved - violationsIntroduced);
-        //ranking.setViolationsIntroduced(violationsIntroduced);
-        ranking.setViolationsResolved(violationsResolved);
-        ranking.setViolationsIntroduced(violationsIntroduced);
-
-        // Code Rock Score (bugs per KLOC)
-        ranking.setBugsPerKloc(BigDecimal.valueOf(totalKLOC > 0 ? bugsIntroduced / totalKLOC : 0.0));
-        ranking.setCodeRockScore(ranking.getBugsPerKloc());
-
-        // Code Shield Score (vulnerabilities per KLOC)
-        ranking.setVulnerabilitiesPerKloc(BigDecimal.valueOf(totalKLOC > 0 ? vulnerabilitiesIntroduced / totalKLOC : 0.0));
-        ranking.setCodeShieldScore(ranking.getVulnerabilitiesPerKloc());
-
-        // Craftsman Score (code smells per KLOC)
-        ranking.setCodeSmellsPerKloc(BigDecimal.valueOf(totalKLOC > 0 ? codeSmellsIntroduced / totalKLOC : 0.0));
-        ranking.setCraftsmanScore(ranking.getCodeSmellsPerKloc());
-
-        // set totalKloc as BigDecimal
-        ranking.setTotalKloc(BigDecimal.valueOf(totalKLOC));
-
-        log.debug("Calculated ranking for {}: defect={}, bugs/kloc={}, vuln/kloc={}, smells/kloc={}",
-                developer.getDisplayName(),
-                ranking.getDefectTerminatorScore(),
-                ranking.getBugsPerKloc(),
-                ranking.getVulnerabilitiesPerKloc(),
-                ranking.getCodeSmellsPerKloc());
-
-        return ranking;
-    }
-
-    /**
-     * Calculate rankings for all active projects
-     */
-    @Transactional
-    public void calculateProjectRankings(LocalDate rankingPeriod) {
-        log.info("Calculating project rankings for period: {}", rankingPeriod);
-
-        LocalDate monthStart = rankingPeriod.withDayOfMonth(1);
-        LocalDate monthEnd = monthStart.plusMonths(1).minusDays(1);
-
-        List<Project> projects = projectRepository.findByIsActiveTrue();
-        log.info("Processing {} projects", projects.size());
-
-        List<ProjectRanking> rankings = new ArrayList<>();
-
-        for (Project project : projects) {
-            try {
-                ProjectRanking ranking = calculateSingleProjectRanking(project, monthStart, monthEnd);
-                if (ranking != null) {
-                    rankings.add(ranking);
-                }
-            } catch (Exception e) {
-                log.error("Error calculating ranking for project {}: {}",
-                        project.getProjectName(), e.getMessage());
-            }
-        }
+        // Save all rankings first
+        rankings = individualRankingRepository.saveAll(rankings);
 
         // Assign ranks
-        assignProjectDefectTerminatorRanks(rankings);
-        assignProjectCodeRockRanks(rankings);
-        assignProjectCodeShieldRanks(rankings);
-        assignProjectCraftsmanRanks(rankings);
+        assignIndividualRanks(rankings, month);
+    }
 
-        // Save all rankings
-        projectRankingRepository.saveAll(rankings);
+    private void assignIndividualRanks(List<IndividualRanking> rankings, LocalDate month) {
+        // Rank Defect Terminator (highest score wins)
+        List<IndividualRanking> sortedByDefect = rankings.stream()
+                .sorted(Comparator.comparing(IndividualRanking::getDefectTerminatorScore).reversed())
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByDefect.size(); i++) {
+            sortedByDefect.get(i).setDefectTerminatorRank(i + 1);
+        }
 
-        log.info("✓ Calculated rankings for {} projects", rankings.size());
+        // Rank Code Rock (lowest score wins)
+        List<IndividualRanking> sortedByRock = rankings.stream()
+                .sorted(Comparator.comparing(IndividualRanking::getCodeRockScore))
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByRock.size(); i++) {
+            sortedByRock.get(i).setCodeRockRank(i + 1);
+        }
+
+        // Rank Code Shield (lowest score wins)
+        List<IndividualRanking> sortedByShield = rankings.stream()
+                .sorted(Comparator.comparing(IndividualRanking::getCodeShieldScore))
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByShield.size(); i++) {
+            sortedByShield.get(i).setCodeShieldRank(i + 1);
+        }
+
+        // Rank Craftsman (lowest score wins)
+        List<IndividualRanking> sortedByCraftsman = rankings.stream()
+                .sorted(Comparator.comparing(IndividualRanking::getCraftsmanScore))
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByCraftsman.size(); i++) {
+            sortedByCraftsman.get(i).setCraftsmanRank(i + 1);
+        }
+
+        individualRankingRepository.saveAll(rankings);
+        // After assigning category ranks, compute the Climber metric comparing with previous month
+        computeClimberScores(rankings, month);
     }
 
     /**
-     * Calculate ranking for a single project
+     * Compute climber score for each developer as the average positive improvement across
+     * the four categories comparing previous month -> current month.
+     * Formula: sum(max(prevRank - currRank, 0) for each category) / 4
      */
-    private ProjectRanking calculateSingleProjectRanking(Project project,
-                                                         LocalDate monthStart,
-                                                         LocalDate monthEnd) {
-        // Get developer metrics for this project
-        List<DeveloperMetricsDaily> devMetrics = new ArrayList<>();
-        for (LocalDate date = monthStart; !date.isAfter(monthEnd); date = date.plusDays(1)) {
-            devMetrics.addAll(developerMetricsDailyRepository.findByProjectAndDate(project, date));
-        }
-
-        if (devMetrics.isEmpty()) {
-            log.debug("No metrics found for project: {}", project.getProjectName());
-            return null;
-        }
-
-        // Aggregate metrics
-        int violationsIntroduced = devMetrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getViolationsIntroduced)
-                .sum();
-
-        int violationsResolved = devMetrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getViolationsResolved)
-                .sum();
-
-        int bugsIntroduced = devMetrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getBugsIntroduced)
-                .sum();
-
-        int vulnerabilitiesIntroduced = devMetrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getVulnerabilitiesIntroduced)
-                .sum();
-
-        int codeSmellsIntroduced = devMetrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getCodeSmellsIntroduced)
-                .sum();
-
-        int linesOfCode = devMetrics.stream()
-                .mapToInt(DeveloperMetricsDaily::getLinesOfCodeContributed)
-                .sum();
-
-        double totalKLOC = linesOfCode / 1000.0;
-
-        ProjectRanking ranking = new ProjectRanking();
-        ranking.setProject(project);
-        ranking.setRankingPeriod(monthStart);
-
-        ranking.setDefectTerminatorScore(violationsResolved - violationsIntroduced);
-        //ranking.setViolationsIntroduced(violationsIntroduced);
-        ranking.setViolationsResolved(violationsResolved);
-
-        ranking.setBugsPerKloc(BigDecimal.valueOf(totalKLOC > 0 ? bugsIntroduced / totalKLOC : 0.0));
-        ranking.setCodeRockScore(ranking.getBugsPerKloc());
-
-        ranking.setVulnerabilitiesPerKloc(BigDecimal.valueOf(totalKLOC > 0 ? vulnerabilitiesIntroduced / totalKLOC : 0.0));
-        ranking.setCodeShieldScore(ranking.getVulnerabilitiesPerKloc());
-
-        ranking.setCodeSmellsPerKloc(BigDecimal.valueOf(totalKLOC > 0 ? codeSmellsIntroduced / totalKLOC : 0.0));
-        ranking.setCraftsmanScore(ranking.getCodeSmellsPerKloc());
-
-        //ranking.setTotalKloc(totalKLOC);
-
-        return ranking;
-    }
-
-    /**
-     * Identify and store monthly champions
-     */
-    @Transactional
-    public void identifyMonthlyChampions(LocalDate monthStart) {
-        log.info("Identifying champions for: {}", monthStart);
-
-        // Clear existing champions for this month
-        monthlyChampionRepository.deleteByPeriod(monthStart);
-
-        // Get all rankings for this month
-        List<IndividualRanking> individualRankings = individualRankingRepository
-                .findByRankingPeriod(monthStart);
-        List<ProjectRanking> projectRankings = projectRankingRepository
-                .findByRankingPeriod(monthStart);
-
-        // Identify individual champions
-        identifyDefectTerminatorChampion(individualRankings, monthStart);
-        identifyCodeRockChampion(individualRankings, monthStart);
-        identifyCodeShieldChampion(individualRankings, monthStart);
-        identifyCraftsmanChampion(individualRankings, monthStart);
-        identifyClimberChampion(individualRankings, monthStart);
-
-        // Identify project champions
-        identifyProjectDefectTerminatorChampion(projectRankings, monthStart);
-        identifyProjectCodeRockChampion(projectRankings, monthStart);
-        identifyProjectCodeShieldChampion(projectRankings, monthStart);
-        identifyProjectCraftsmanChampion(projectRankings, monthStart);
-
-        log.info("✓ Champions identified and stored");
-    }
-
-    // ============ RANKING ASSIGNMENT METHODS ============
-
-    private void assignDefectTerminatorRanks(List<IndividualRanking> rankings) {
-        rankings.sort(Comparator.comparingInt(IndividualRanking::getDefectTerminatorScore).reversed());
-        for (int i = 0; i < rankings.size(); i++) {
-            rankings.get(i).setDefectTerminatorRank(i + 1);
-        }
-    }
-
-    private void assignCodeRockRanks(List<IndividualRanking> rankings) {
-        // Filter only developers with sufficient code (> 1 KLOC)
-        List<IndividualRanking> qualified = rankings.stream()
-                .filter(r -> r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .sorted(Comparator.comparing(IndividualRanking::getCodeRockScore, Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
-
-        for (int i = 0; i < qualified.size(); i++) {
-            qualified.get(i).setCodeRockRank(i + 1);
-        }
-
-        // Assign high rank to unqualified
-        rankings.stream()
-                .filter(r -> r.getTotalKloc() == null || r.getTotalKloc().compareTo(BigDecimal.ONE) < 0)
-                .forEach(r -> r.setCodeRockRank(999));
-    }
-
-    private void assignCodeShieldRanks(List<IndividualRanking> rankings) {
-        List<IndividualRanking> qualified = rankings.stream()
-                .filter(r -> r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .sorted(Comparator.comparing(IndividualRanking::getCodeShieldScore, Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
-
-        for (int i = 0; i < qualified.size(); i++) {
-            qualified.get(i).setCodeShieldRank(i + 1);
-        }
-
-        rankings.stream()
-                .filter(r -> r.getTotalKloc() == null || r.getTotalKloc().compareTo(BigDecimal.ONE) < 0)
-                .forEach(r -> r.setCodeShieldRank(999));
-    }
-
-    private void assignCraftsmanRanks(List<IndividualRanking> rankings) {
-        List<IndividualRanking> qualified = rankings.stream()
-                .filter(r -> r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .sorted(Comparator.comparing(IndividualRanking::getCraftsmanScore, Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
-
-        for (int i = 0; i < qualified.size(); i++) {
-            qualified.get(i).setCraftsmanRank(i + 1);
-        }
-
-        rankings.stream()
-                .filter(r -> r.getTotalKloc() == null || r.getTotalKloc().compareTo(BigDecimal.ONE) < 0)
-                .forEach(r -> r.setCraftsmanRank(999));
-    }
-
-    private void assignClimberRanks(List<IndividualRanking> rankings, LocalDate currentMonth) {
-        LocalDate previousMonth = currentMonth.minusMonths(1);
+    private void computeClimberScores(List<IndividualRanking> rankings, LocalDate month) {
+        LocalDate prevMonth = month.minusMonths(1);
 
         for (IndividualRanking current : rankings) {
-            // Get previous month's ranking
-            Optional<IndividualRanking> previousOpt = individualRankingRepository
-                    .findByDeveloperAndRankingPeriod(current.getDeveloper(), previousMonth);
+            int improvementSum = 0;
 
-            if (previousOpt.isPresent()) {
-                IndividualRanking previous = previousOpt.get();
+            Optional<IndividualRanking> prevOpt = individualRankingRepository
+                    .findByDeveloperAndRankingPeriod(current.getDeveloper(), prevMonth);
 
-                // Calculate average rank improvement
-                double avgPreviousRank = (previous.getDefectTerminatorRank() +
-                        previous.getCodeRockRank() +
-                        previous.getCodeShieldRank() +
-                        previous.getCraftsmanRank()) / 4.0;
+            if (prevOpt.isPresent()) {
+                IndividualRanking prev = prevOpt.get();
 
-                double avgCurrentRank = (current.getDefectTerminatorRank() +
-                        current.getCodeRockRank() +
-                        current.getCodeShieldRank() +
-                        current.getCraftsmanRank()) / 4.0;
+                int prevDef = prev.getDefectTerminatorRank() != null ? prev.getDefectTerminatorRank() : 0;
+                int currDef = current.getDefectTerminatorRank() != null ? current.getDefectTerminatorRank() : Integer.MAX_VALUE;
+                improvementSum += Math.max(prevDef - currDef, 0);
 
-                double improvement = avgPreviousRank - avgCurrentRank;
-                current.setAvgRankImprovement(BigDecimal.valueOf(improvement));
-                current.setClimberScore(BigDecimal.valueOf(improvement));
+                int prevRock = prev.getCodeRockRank() != null ? prev.getCodeRockRank() : 0;
+                int currRock = current.getCodeRockRank() != null ? current.getCodeRockRank() : Integer.MAX_VALUE;
+                improvementSum += Math.max(prevRock - currRock, 0);
+
+                int prevShield = prev.getCodeShieldRank() != null ? prev.getCodeShieldRank() : 0;
+                int currShield = current.getCodeShieldRank() != null ? current.getCodeShieldRank() : Integer.MAX_VALUE;
+                improvementSum += Math.max(prevShield - currShield, 0);
+
+                int prevCraft = prev.getCraftsmanRank() != null ? prev.getCraftsmanRank() : 0;
+                int currCraft = current.getCraftsmanRank() != null ? current.getCraftsmanRank() : Integer.MAX_VALUE;
+                improvementSum += Math.max(prevCraft - currCraft, 0);
             } else {
-                // No previous data - neutral score
-                current.setAvgRankImprovement(BigDecimal.valueOf(0.0));
-                current.setClimberScore(BigDecimal.valueOf(0.0));
+                // No previous data -> no improvement
+                improvementSum = 0;
             }
+
+            BigDecimal avgImprovement = new BigDecimal(improvementSum).divide(new BigDecimal(4), 2, RoundingMode.HALF_UP);
+            current.setClimberScore(avgImprovement);
         }
 
-        // Assign ranks based on improvement
-        rankings.sort(Comparator.comparing(IndividualRanking::getClimberScore, Comparator.nullsLast(Comparator.naturalOrder())).reversed());
-        for (int i = 0; i < rankings.size(); i++) {
-            rankings.get(i).setClimberRank(i + 1);
-        }
-    }
+        // Rank climbers: higher average improvement wins
+        List<IndividualRanking> sortedByClimber = rankings.stream()
+                .sorted(Comparator.comparing(IndividualRanking::getClimberScore, Comparator.nullsLast(Comparator.reverseOrder())))
+                .collect(Collectors.toList());
 
-    // ============ PROJECT RANKING ASSIGNMENT ============
-
-    private void assignProjectDefectTerminatorRanks(List<ProjectRanking> rankings) {
-        rankings.sort(Comparator.comparingInt(ProjectRanking::getDefectTerminatorScore).reversed());
-        for (int i = 0; i < rankings.size(); i++) {
-            rankings.get(i).setDefectTerminatorRank(i + 1);
-        }
-    }
-
-    private void assignProjectCodeRockRanks(List<ProjectRanking> rankings) {
-        List<ProjectRanking> qualified = rankings.stream()
-                .filter(r -> r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .sorted(Comparator.comparing(ProjectRanking::getCodeRockScore, Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
-
-        for (int i = 0; i < qualified.size(); i++) {
-            qualified.get(i).setCodeRockRank(i + 1);
+        for (int i = 0; i < sortedByClimber.size(); i++) {
+            sortedByClimber.get(i).setClimberRank(i + 1);
         }
 
-        rankings.stream()
-                .filter(r -> r.getTotalKloc() == null || r.getTotalKloc().compareTo(BigDecimal.ONE) < 0)
-                .forEach(r -> r.setCodeRockRank(999));
+        individualRankingRepository.saveAll(rankings);
     }
 
-    private void assignProjectCodeShieldRanks(List<ProjectRanking> rankings) {
-        List<ProjectRanking> qualified = rankings.stream()
-                .filter(r -> r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .sorted(Comparator.comparing(ProjectRanking::getCodeShieldScore, Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
+    private void calculateProjectRankings(LocalDate month) {
+        List<Project> activeProjects = projectRepository.findByIsActiveTrue();
+        List<ProjectRanking> rankings = new ArrayList<>();
 
-        for (int i = 0; i < qualified.size(); i++) {
-            qualified.get(i).setCodeShieldRank(i + 1);
+        for (Project project : activeProjects) {
+            ProjectRanking ranking = projectRankingRepository
+                    .findByProjectAndRankingPeriod(project, month)
+                    .orElseGet(() -> ProjectRanking.builder()
+                            .project(project)
+                            .rankingPeriod(month)
+                            .build());
+
+            // Get KLOC from SonarQube using the KLOC service
+            BigDecimal kloc = klocCalculationService.getProjectKloc(project);
+            ranking.setTotalKloc(kloc);
+
+            // Calculate violations for the project
+            Long bugCount = issueRepository.countOpenIssuesByType(project.getId(), Issue.IssueType.BUG);
+            Long vulnCount = issueRepository.countOpenIssuesByType(project.getId(), Issue.IssueType.VULNERABILITY);
+            Long smellCount = issueRepository.countOpenIssuesByType(project.getId(), Issue.IssueType.CODE_SMELL);
+
+            // Total defects
+            int totalDefects = bugCount.intValue() + vulnCount.intValue() + smellCount.intValue();
+            ranking.setDefectTerminatorScore(totalDefects);
+
+            // Code Rock Score (Bugs per KLOC)
+            BigDecimal bugsPerKloc = calculatePerKloc(BigDecimal.valueOf(bugCount), kloc);
+            ranking.setBugsPerKloc(bugsPerKloc);
+            ranking.setCodeRockScore(bugsPerKloc);
+
+            // Code Shield Score (Vulnerabilities per KLOC)
+            BigDecimal vulnPerKloc = calculatePerKloc(BigDecimal.valueOf(vulnCount), kloc);
+            ranking.setVulnerabilitiesPerKloc(vulnPerKloc);
+            ranking.setCodeShieldScore(vulnPerKloc);
+
+            // Craftsman Score (Code Smells per KLOC)
+            BigDecimal smellsPerKloc = calculatePerKloc(BigDecimal.valueOf(smellCount), kloc);
+            ranking.setCodeSmellsPerKloc(smellsPerKloc);
+            ranking.setCraftsmanScore(smellsPerKloc);
+
+            rankings.add(ranking);
         }
 
-        rankings.stream()
-                .filter(r -> r.getTotalKloc() == null || r.getTotalKloc().compareTo(BigDecimal.ONE) < 0)
-                .forEach(r -> r.setCodeShieldRank(999));
+        // Save all rankings first
+        rankings = projectRankingRepository.saveAll(rankings);
+
+        // Assign ranks
+        assignProjectRanks(rankings, month);
     }
 
-    private void assignProjectCraftsmanRanks(List<ProjectRanking> rankings) {
-        List<ProjectRanking> qualified = rankings.stream()
-                .filter(r -> r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .sorted(Comparator.comparing(ProjectRanking::getCraftsmanScore, Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
-
-        for (int i = 0; i < qualified.size(); i++) {
-            qualified.get(i).setCraftsmanRank(i + 1);
+    private void assignProjectRanks(List<ProjectRanking> rankings, LocalDate month) {
+        // Rank Defect Terminator (lowest total defects wins)
+        List<ProjectRanking> sortedByDefect = rankings.stream()
+                .sorted(Comparator.comparing(ProjectRanking::getDefectTerminatorScore))
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByDefect.size(); i++) {
+            sortedByDefect.get(i).setDefectTerminatorRank(i + 1);
         }
 
-        rankings.stream()
-                .filter(r -> r.getTotalKloc() == null || r.getTotalKloc().compareTo(BigDecimal.ONE) < 0)
-                .forEach(r -> r.setCraftsmanRank(999));
+        // Rank Code Rock (lowest score wins)
+        List<ProjectRanking> sortedByRock = rankings.stream()
+                .sorted(Comparator.comparing(ProjectRanking::getCodeRockScore))
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByRock.size(); i++) {
+            sortedByRock.get(i).setCodeRockRank(i + 1);
+        }
+
+        // Rank Code Shield (lowest score wins)
+        List<ProjectRanking> sortedByShield = rankings.stream()
+                .sorted(Comparator.comparing(ProjectRanking::getCodeShieldScore))
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByShield.size(); i++) {
+            sortedByShield.get(i).setCodeShieldRank(i + 1);
+        }
+
+        // Rank Craftsman (lowest score wins)
+        List<ProjectRanking> sortedByCraftsman = rankings.stream()
+                .sorted(Comparator.comparing(ProjectRanking::getCraftsmanScore))
+                .collect(Collectors.toList());
+        for (int i = 0; i < sortedByCraftsman.size(); i++) {
+            sortedByCraftsman.get(i).setCraftsmanRank(i + 1);
+        }
+
+        projectRankingRepository.saveAll(rankings);
     }
 
-    // ============ CHAMPION IDENTIFICATION ============
-
-    private void identifyDefectTerminatorChampion(List<IndividualRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getDefectTerminatorRank() == 1)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.DEFECT_TERMINATOR,
-                        MonthlyChampion.EntityType.INDIVIDUAL,
-                        r.getDeveloper().getId(),
-                        r.getDeveloper().getDisplayName(),
-                        BigDecimal.valueOf(r.getDefectTerminatorScore()),
-                        String.format("{\"violations_resolved\": %d, \"violations_introduced\": %d}",
-                                r.getViolationsResolved(), r.getViolationsIntroduced())
-                ));
+    private BigDecimal calculatePerKloc(BigDecimal count, BigDecimal kloc) {
+        if (kloc.compareTo(BigDecimal.ZERO) == 0) {
+            return BigDecimal.ZERO;
+        }
+        return count.divide(kloc, 2, RoundingMode.HALF_UP);
     }
 
-    private void identifyCodeRockChampion(List<IndividualRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getCodeRockRank() == 1 && r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.CODE_ROCK,
-                        MonthlyChampion.EntityType.INDIVIDUAL,
-                        r.getDeveloper().getId(),
-                        r.getDeveloper().getDisplayName(),
-                        r.getBugsPerKloc(),
-                        String.format("{\"bugs_per_kloc\": %.4f, \"total_kloc\": %.2f}",
-                                r.getBugsPerKloc().doubleValue(), r.getTotalKloc().doubleValue())
-                ));
-    }
-
-    private void identifyCodeShieldChampion(List<IndividualRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getCodeShieldRank() == 1 && r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.CODE_SHIELD,
-                        MonthlyChampion.EntityType.INDIVIDUAL,
-                        r.getDeveloper().getId(),
-                        r.getDeveloper().getDisplayName(),
-                        r.getVulnerabilitiesPerKloc(),
-                        String.format("{\"vulnerabilities_per_kloc\": %.4f, \"total_kloc\": %.2f}",
-                                r.getVulnerabilitiesPerKloc().doubleValue(), r.getTotalKloc().doubleValue())
-                ));
-    }
-
-    private void identifyCraftsmanChampion(List<IndividualRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getCraftsmanRank() == 1 && r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.CRAFTSMAN,
-                        MonthlyChampion.EntityType.INDIVIDUAL,
-                        r.getDeveloper().getId(),
-                        r.getDeveloper().getDisplayName(),
-                        r.getCodeSmellsPerKloc(),
-                        String.format("{\"code_smells_per_kloc\": %.4f, \"total_kloc\": %.2f}",
-                                r.getCodeSmellsPerKloc().doubleValue(), r.getTotalKloc().doubleValue())
-                ));
-    }
-
-    private void identifyClimberChampion(List<IndividualRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> false)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.CLIMBER,
-                        MonthlyChampion.EntityType.INDIVIDUAL,
-                        r.getDeveloper().getId(),
-                        r.getDeveloper().getDisplayName(),
-                        r.getAvgRankImprovement(),
-                        String.format("{\"rank_improvement\": %.2f}",
-                                r.getAvgRankImprovement().doubleValue())
-                ));
-    }
-
-    // Similar methods for project champions...
-    private void identifyProjectDefectTerminatorChampion(List<ProjectRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getDefectTerminatorRank() == 1)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.DEFECT_TERMINATOR,
-                        MonthlyChampion.EntityType.PROJECT,
-                        r.getProject().getId(),
-                        r.getProject().getProjectName(),
-                        BigDecimal.valueOf(r.getDefectTerminatorScore()),
-                        String.format("{\"violations_resolved\": %d, \"violations_introduced\": %d}",
-                                r.getViolationsResolved(), r.getViolationsIntroduced())
-                ));
-    }
-
-    private void identifyProjectCodeRockChampion(List<ProjectRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getCodeRockRank() == 1 && r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.CODE_ROCK,
-                        MonthlyChampion.EntityType.PROJECT,
-                        r.getProject().getId(),
-                        r.getProject().getProjectName(),
-                        r.getBugsPerKloc(),
-                        String.format("{\"bugs_per_kloc\": %.4f}",
-                                r.getBugsPerKloc().doubleValue())
-                ));
-    }
-
-    private void identifyProjectCodeShieldChampion(List<ProjectRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getCodeShieldRank() == 1 && r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.CODE_SHIELD,
-                        MonthlyChampion.EntityType.PROJECT,
-                        r.getProject().getId(),
-                        r.getProject().getProjectName(),
-                        r.getVulnerabilitiesPerKloc(),
-                        String.format("{\"vulnerabilities_per_kloc\": %.4f}",
-                                r.getVulnerabilitiesPerKloc().doubleValue())
-                ));
-    }
-
-    private void identifyProjectCraftsmanChampion(List<ProjectRanking> rankings, LocalDate month) {
-        rankings.stream()
-                .filter(r -> r.getCraftsmanRank() == 1 && r.getTotalKloc() != null && r.getTotalKloc().compareTo(BigDecimal.ONE) >= 0)
-                .findFirst()
-                .ifPresent(r -> saveChampion(
-                        month,
-                        MonthlyChampion.ChampionCategory.CRAFTSMAN,
-                        MonthlyChampion.EntityType.PROJECT,
-                        r.getProject().getId(),
-                        r.getProject().getProjectName(),
-                        r.getCodeSmellsPerKloc(),
-                        String.format("{\"code_smells_per_kloc\": %.4f}",
-                                r.getCodeSmellsPerKloc().doubleValue())
-                ));
-    }
-
-    private void saveChampion(LocalDate period,
-                              MonthlyChampion.ChampionCategory category,
-                              MonthlyChampion.EntityType entityType,
-                              Integer entityId,
-                              String entityName,
-                              BigDecimal score,
-                              String metricDetails) {
-        MonthlyChampion champion = new MonthlyChampion();
-        champion.setPeriod(period);
-        champion.setCategory(category);
-        champion.setEntityType(entityType);
-        champion.setEntityId(entityId);
-        champion.setEntityName(entityName);
-        champion.setScore(score);
-        champion.setMetricDetails(metricDetails);
-
-        monthlyChampionRepository.save(champion);
-
-        log.info("✓ {} Champion ({}): {} with score {}", category, entityType, entityName, score);
+    private BigDecimal parseMetric(String value) {
+        if (value == null || value.isEmpty()) {
+            return BigDecimal.ZERO;
+        }
+        try {
+            return new BigDecimal(value);
+        } catch (NumberFormatException e) {
+            return BigDecimal.ZERO;
+        }
     }
 }
